# khl

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  preprocess.py  pyproject.toml  utils.py  wrong_lemmas.py
.github/workflows/: ci.yaml
data/: frequency_dictionary.json
khl/: __init__.py  preprocess.py  utils.py
tests/: example_frequency_dictionary.json  lemmas_dictionary_for_tests.json  test_khl.py  test_lemmas_dictionary.json  test_preprocess.py  test_utils.py
