[tool.poetry]
name = "khl"
version = "0.1.0"
description = "Preprocess russian hockey news for further machine learning."
authors = ["Rishat Fayzullin <nilluziaf@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
natasha = "^1.4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
