[tool.poetry]
name = "khl"
version = "0.1.0"
description = "Preprocess russian hockey news for further machine learning."
authors = ["Rishat Fayzullin <nilluziaf@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
natasha = "^1.4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
black = "^22.12.0"
flake8 = "^6.0.0"
isort = "^5.11.4"
pre-commit = "^2.21.0"
vulture = "^2.7"
pre-commit-hooks = "^4.4.0"
mypy = "^0.991"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.vulture]
min_confidence = 70
paths = ["."]

# https://mypy.readthedocs.io/en/stable/config_file.html#example-pyproject-toml
[[tool.mypy.overrides]]
module = [
    "tests.*",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "natasha.*",
]
ignore_missing_imports = true
